# abacus-develop

./: .gitmodules  CMakeLists.txt  README.md  install_dsp.sh
.github/workflows/: build_test_cmake.yml  coverage.yml  test.yml
cmake/: FindBLAS.cmake  FindELPA.cmake  FindLAPACK.cmake  FindLibComm.cmake  FindLibRI.cmake  FindLibxc.cmake
docs/: CITATIONS.md  conf.py  requirements.txt
docs/advanced/: install.md  opt.md  pp_orb.md
docs/quick_start/: easy_install.md  input.md
examples/fixed_occupations/: INPUT
examples/hefei-namd/: INPUT  README
examples/interface_phonopy/: INPUT  KPT
examples/wfc/: README
python/pyabacus/: CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
python/pyabacus/examples/: diago_matrix.py
python/pyabacus/src/: py_diago_dav_subspace.hpp  py_diago_david.hpp  py_hsolver.cpp
python/pyabacus/src/ModuleBase/: CMakeLists.txt  py_base_math.cpp
python/pyabacus/src/ModuleNAO/: CMakeLists.txt  py_m_nao.cpp
python/pyabacus/src/hsolver/: CMakeLists.txt  py_diago_cg.hpp  py_diago_dav_subspace.hpp  py_diago_david.hpp  py_hsolver.cpp
python/pyabacus/src/pyabacus/: __init__.py  cell.py
python/pyabacus/src/pyabacus/ModuleBase/: _module_base.py
python/pyabacus/src/pyabacus/ModuleNAO/: __init__.py  _module_nao.py
python/pyabacus/src/pyabacus/hsolver/: __init__.py  _hsolver.py
python/pyabacus/src/pyabacus/io/: __init__.py  stru.py  utils.py  xyz.py
python/pyabacus/tests/: test_base_math.py  test_cell.py  test_hsolver.py
python/pyabacus/tests/test_cell/: h2o.xyz
source/: CMakeLists.txt  Makefile  Makefile.Objects  Makefile.vars  driver.cpp  driver.h  driver_run.cpp  main.cpp  version.h
source/module_base/: formatter.h  (+35 more)
source/module_esolver/: CMakeLists.txt  cal_edm_tddft.cpp  cell_dependency.h  esolver.cpp  esolver.h  esolver_dp.cpp  esolver_dp.h  esolver_fp.cpp  esolver_fp.h  esolver_gets.cpp  esolver_gets.h  esolver_ks.cpp  esolver_ks.h  esolver_ks_lcao.cpp  esolver_ks_lcao.h  esolver_ks_lcao_tddft.cpp  esolver_ks_lcao_tddft.h  esolver_ks_lcaopw.cpp  esolver_ks_lcaopw.h  esolver_ks_pw.cpp  esolver_ks_pw.h  esolver_lj.cpp  esolver_lj.h  esolver_of.cpp  esolver_of.h  esolver_of_interface.cpp  esolver_of_tool.cpp  esolver_sdft_pw.cpp  esolver_sdft_pw.h  io_npz.cpp  lcao_before_scf.cpp  lcao_gets.cpp  lcao_nscf.cpp  lcao_others.cpp  pw_fun.cpp  pw_init_after_vc.cpp  pw_init_globalc.cpp  pw_nscf.cpp  pw_others.cpp  set_matrix_grid.cpp
source/module_esolver/test/: esolver_dp_test.cpp  for_test.h
source/module_hamilt_lcao/module_deepks/: CMakeLists.txt  LCAO_deepks.cpp  LCAO_deepks.h  LCAO_deepks_interface.cpp  LCAO_deepks_interface.h  LCAO_deepks_io.cpp  LCAO_deepks_io.h  LCAO_deepks_odelta.cpp  LCAO_deepks_pdm.cpp  LCAO_deepks_phialpha.cpp  LCAO_deepks_psialpha.cpp  LCAO_deepks_torch.cpp  LCAO_deepks_vdelta.cpp  cal_descriptor.cpp  cal_gdmepsl.cpp  cal_gdmx.cpp  cal_gedm.cpp  cal_gvx.cpp  deepks_basic.cpp  deepks_basic.h  deepks_descriptor.cpp  deepks_descriptor.h  deepks_fgamma.cpp  deepks_fk.cpp  deepks_force.cpp  deepks_force.h  deepks_fpre.cpp  deepks_fpre.h  deepks_hmat.cpp  deepks_hmat.h  deepks_orbital.cpp  deepks_orbital.h  deepks_orbpre.cpp  deepks_orbpre.h  deepks_pdm.cpp  deepks_pdm.h  deepks_phialpha.cpp  deepks_phialpha.h  deepks_spre.cpp  deepks_spre.h  (+7 more)
source/module_hamilt_lcao/module_deepks/test/: CMakeLists.txt  LCAO_deepks_test.cpp  LCAO_deepks_test.h  LCAO_deepks_test_prep.cpp  Makefile  Makefile.Objects  klist_1.cpp  main_deepks.cpp
source/module_hamilt_lcao/module_tddft/: CMakeLists.txt  band_energy.cpp  band_energy.h  evolve_elec.cpp  evolve_elec.h  evolve_psi.cpp  evolve_psi.h  middle_hamilt.cpp  middle_hamilt.h  norm_psi.cpp  norm_psi.h  propagator.cpp  propagator.h  propagator_cn2.cpp  propagator_etrs.cpp  propagator_taylor.cpp  td_current.cpp  td_current.h  upsi.cpp  upsi.h
source/module_hamilt_lcao/module_tddft/test/: CMakeLists.txt  band_energy_test.cpp  middle_hamilt_test.cpp  norm_psi_test.cpp  propagator_test1.cpp  propagator_test2.cpp  propagator_test3.cpp  upsi_test1.cpp  upsi_test2.cpp  upsi_test3.cpp
source/module_hamilt_pw/hamilt_ofdft/: CMakeLists.txt  kedf_lkt.cpp  kedf_ml.cpp  kedf_ml.h  kedf_ml_label.cpp  kedf_ml_pot.cpp  kedf_vw.cpp  ml_data.cpp  ml_data.h  ml_data_descriptor.cpp  of_stress_pw.cpp  of_stress_pw.h
source/module_hamilt_pw/hamilt_ofdft/ml_tools/: CMakeLists.txt  data.cpp  data.h  grid.cpp  grid.h  input.cpp  input.h  kernel.cpp  kernel.h  main.cpp  nn_of.cpp  nn_of.h  pauli_potential.cpp  pauli_potential.h  train_kedf.cpp  train_kedf.h
source/module_lr/: CMakeLists.txt  esolver_lrtd_lcao.cpp  esolver_lrtd_lcao.h  hamilt_casida.cpp  hamilt_casida.h  hamilt_ulr.hpp  hsolver_lrtd.cpp  hsolver_lrtd.hpp  lr_spectrum.cpp  lr_spectrum.h  lr_spectrum_velocity.cpp
source/module_lr/AX/: AX.h  AX_parallel.cpp  AX_serial.cpp
source/module_lr/AX/test/: AX_test.cpp  CMakeLists.txt
source/module_lr/ao_to_mo_transformer/: ao_to_mo.h  ao_to_mo_parallel.cpp  ao_to_mo_serial.cpp
source/module_lr/ao_to_mo_transformer/test/: CMakeLists.txt  ao_to_mo_test.cpp
source/module_lr/dm_trans/: dm_trans.h  dm_trans_parallel.cpp  dm_trans_serial.cpp  dmr_complex.cpp
source/module_lr/dm_trans/test/: CMakeLists.txt  dm_trans_test.cpp
source/module_lr/operator_casida/: operator_lr_diag.h  operator_lr_exx.cpp  operator_lr_exx.h  operator_lr_hxc.cpp  operator_lr_hxc.h
source/module_lr/potentials/: kernel_xc.cpp  pot_hxc_lrtd.cpp  pot_hxc_lrtd.h  xc_kernel.cpp  xc_kernel.h
source/module_lr/ri_benchmark/: operator_ri_hartree.h  ri_benchmark.hpp
source/module_lr/ri_benchmark/test/: ri_benchmark_test.cpp
source/module_lr/utils/: gint_move.hpp  lr_util.cpp  lr_util.h  lr_util.hpp  lr_util_hcontainer.cpp  lr_util_hcontainer.h  lr_util_print.h  lr_util_xc.hpp
source/module_lr/utils/test/: CMakeLists.txt  lr_util_algorithms_test.cpp
source/module_rdmft/: CMakeLists.txt  rdmft.cpp  rdmft.h  rdmft_pot.cpp  rdmft_tools.cpp  rdmft_tools.h  update_state_rdmft.cpp
toolchain/: README.md  build_abacus_gnu.sh  build_abacus_intel-mpich.sh  build_abacus_intel.sh  install_abacus_toolchain.sh
(+1510 files in other folders)
